backend ui updated

--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,5 @@
 PORT=5050
 # MONGO_URI=mongodb://localhost:27017/uniswap
 MONGO_URI=mongodb+srv://mayankmokta:Mayankmokta123@mayank.1uzvhv1.mongodb.net/
+RPC_URL=http://127.0.0.1:8545
+FACTORY_ADDRESS=0x9fE46736679d2D9a65F0992F2272dE9f3c7fa6e0
